Avoid highlighted topic checkbox blocking clicks on Save button. Remove whitespace.

--- a/style.css
+++ b/style.css
@@ -871,6 +871,10 @@ div.utility-block input.form-submit {
   margin-right:10px;
   float:left;
   }
+/* Avoid highlighted topic checkbox blocking clicks on Save button. */
+#stored-views-form #edit-status-wrapper {
+  float: left;
+  }
 
 div.utility-block input.form-text { width:50%; }
 
@@ -1138,7 +1142,7 @@ div.page-content div.node {
   -webkit-border-radius:5px;
 
   background:#fff;
-  padding:10px 20px;  
+  padding:10px 20px;
   }
 
   div.node-teaser { margin:0px 0px 10px; }
